--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "peerjs-server",
+  "name": "peer-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1",
-    "peer": "^1.0.2"
+    "peer": "^1.3.1"
   }
 }
