--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "peer-server",
+  "name": "peerjs-server",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "peer": "^1.3.1"
+    "express": "^4.21.1",
+    "peer": "^1.0.2"
   }
 }
